--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "divideandsolve",
-  "version": "0.1.0",
+  "name": "keepsplit",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
@@ -21,5 +21,27 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anujsinghwd/KeepSplit.git"
+  },
+  "keywords": [
+    "split",
+    "bills",
+    "split",
+    "money",
+    "split",
+    "group",
+    "expense"
+  ],
+  "author": "anuj singh",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/anujsinghwd/KeepSplit/issues"
+  },
+  "homepage": "https://github.com/anujsinghwd/KeepSplit#readme"
 }
