--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.3.14",
     "mysql": "^2.16.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-notifications": "^1.4.3",
     "react-scripts": "2.1.1",
-    "uuid": "^3.3.2"
+    "react-table": "^6.8.6",
+    "uuid": "^3.3.2",
+    "validator": "^10.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
